--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "14.0.2",
     "react": "^18",
     "react-bootstrap": "^2.9.1",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-router": "^6.19.0"
   },
   "devDependencies": {
     "eslint": "^8",
